

                CHANGES IN party VERSION 1.3-1 (2018-08-08)

    o    varimpAUC() now calls varImp::varImpAUC()


                CHANGES IN party VERSION 1.3-0 (2018-04-20)

    o    New scale argument for predict(<cforest>, scale = TRUE, ...).
         For simple regression forests, predicting
         the conditional mean by nearest neighbor weights with
         scale = TRUE is now
         equivalent to the aggregation of means. The unscaled version
         proposed in <doi:10.1002/sim.1593> can be obtained with
         scale = FALSE.}


                CHANGES IN party VERSION 1.2-4 (2017-12-13)

    o    Bonferroni sometimes overcorrected (by taking constant variables into account). 
         Spotted by Heidi Seibold.

    o    Bugfix for long-standing problem in conditional variable importances
         by Dries Debeer.


                CHANGES IN party VERSION 1.2-3 (2017-04-10)

    o    predict(<cforest>, OOB = TRUE) in party < 1.2-0 was _correct_
         and version 1.2-0 to 1.2-2 contained in incorrect "correction".
         The test set error and the out-of-bag error are now (again) 
         roughly equal. There won't be any correlation between 
         observations and out-of-bag predictions when the response is
         independent to all explanatory variables. Out-of-bag predictions 
         in package partykit (>= 2.0-0) are now based on the same
         out-of-bag weights and the results from both packages are 
         roughly equivalent. The issue was first spotted by
         Julian Karch and later by Andrew Sage.

    o    comment on false alarms by maacheck / bcheck (email by
         Tomas Kalibera April 10, 2017) in party/src/*c


                CHANGES IN party VERSION 1.2-2 (2017-02-27)

    o    free memory in src/Distributions.c (pointed out by
         Martin Binder)

    o    register C routines


                CHANGES IN party VERSION 1.2-1 (2017-02-08)

    o    fix a memory leak occuring while searching for surrogate